--- a/Internship2022TeamSzabi/Internship2022TeamSzabi/Views/SplashViewController/SplashViewController.xib
+++ b/Internship2022TeamSzabi/Internship2022TeamSzabi/Views/SplashViewController/SplashViewController.xib
@@ -19,20 +19,19 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chemisty-icon" translatesAutoresizingMaskIntoConstraints="NO" id="7Dp-t4-P1T">
-                    <rect key="frame" x="132" y="373" width="150" height="150"/>
-                    <color key="tintColor" name="TabBarColor"/>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chemisty-icon" translatesAutoresizingMaskIntoConstraints="NO" id="8f1-X7-966">
+                    <rect key="frame" x="144.5" y="385.5" width="125" height="125"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="150" id="IgP-Jf-AEr"/>
-                        <constraint firstAttribute="width" secondItem="7Dp-t4-P1T" secondAttribute="height" id="ha4-cu-AUb"/>
+                        <constraint firstAttribute="width" secondItem="8f1-X7-966" secondAttribute="height" id="g0Z-uv-iKI"/>
+                        <constraint firstAttribute="height" constant="125" id="lQX-Nr-B9O"/>
                     </constraints>
                 </imageView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" name="RegisterBackgroundColor"/>
             <constraints>
-                <constraint firstItem="7Dp-t4-P1T" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="WBK-Dr-njX"/>
-                <constraint firstItem="7Dp-t4-P1T" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="dr3-jA-qqd"/>
+                <constraint firstItem="8f1-X7-966" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="NqU-Ev-axu"/>
+                <constraint firstItem="8f1-X7-966" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="tPk-kO-61c"/>
             </constraints>
             <point key="canvasLocation" x="132" y="93"/>
         </view>
@@ -41,9 +40,6 @@
         <image name="chemisty-icon" width="45" height="51"/>
         <namedColor name="RegisterBackgroundColor">
             <color red="0.75294117647058822" green="0.93725490196078431" blue="0.95294117647058818" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="TabBarColor">
-            <color red="0.48627450980392156" green="0.47843137254901963" blue="0.47843137254901963" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
