--- a/Internship2022TeamSzabi/Internship2022TeamSzabi/Views/TestsSegmentedController/TestsViewController.xib
+++ b/Internship2022TeamSzabi/Internship2022TeamSzabi/Views/TestsSegmentedController/TestsViewController.xib
@@ -26,6 +26,10 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="dr4-kj-EEx">
+                    <rect key="frame" x="0.0" y="77.5" width="414" height="784.5"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                </tableView>
                 <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="nvo-IH-aE5" userLabel="navView">
                     <rect key="frame" x="0.0" y="44" width="414" height="33.5"/>
                     <subviews>
@@ -79,19 +83,15 @@
                         <constraint firstItem="Fur-04-h6b" firstAttribute="leading" secondItem="nvo-IH-aE5" secondAttribute="leading" id="dPI-bx-R0V"/>
                     </constraints>
                 </view>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="dr4-kj-EEx">
-                    <rect key="frame" x="0.0" y="77.5" width="414" height="784.5"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                </tableView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="nvo-IH-aE5" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="AS0-8D-X4m"/>
+                <constraint firstItem="dr4-kj-EEx" firstAttribute="top" secondItem="nvo-IH-aE5" secondAttribute="bottom" id="CKi-0N-0p6"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="dr4-kj-EEx" secondAttribute="trailing" id="GO9-05-5GL"/>
                 <constraint firstItem="nvo-IH-aE5" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="Gd1-OY-Hdm"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="nvo-IH-aE5" secondAttribute="trailing" id="UTk-fC-jOx"/>
-                <constraint firstItem="dr4-kj-EEx" firstAttribute="top" secondItem="nvo-IH-aE5" secondAttribute="bottom" id="hXY-UY-mqt"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="nvo-IH-aE5" secondAttribute="trailing" id="mc9-9k-jlh"/>
                 <constraint firstItem="nvo-IH-aE5" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="tnc-2d-8oT"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="dr4-kj-EEx" secondAttribute="bottom" id="u61-B4-5jF"/>
