--- a/Internship2022TeamSzabi/Internship2022TeamSzabi/Views/TestsSegmentedController/TestsCustomCells/ChaptersTableViewCell.xib
+++ b/Internship2022TeamSzabi/Internship2022TeamSzabi/Views/TestsSegmentedController/TestsCustomCells/ChaptersTableViewCell.xib
@@ -17,7 +17,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="chapterCell" rowHeight="119" id="KGk-i7-Jjw" customClass="ChaptersTableViewCell" customModule="Internship2022TeamSzabi" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="chapterCell" rowHeight="119" id="KGk-i7-Jjw" customClass="ChaptersTableViewCell" customModule="Internship2022TeamSzabi" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="328" height="119"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -56,7 +56,7 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Imc-5Y-Cts" userLabel="Grade">
-                                <rect key="frame" x="212" y="32.5" width="37" height="29.5"/>
+                                <rect key="frame" x="252" y="32.5" width="37" height="29.5"/>
                                 <fontDescription key="fontDescription" name="InterV_Medium" family="Inter V" pointSize="24"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -67,7 +67,7 @@
                             <constraint firstItem="Vcc-DP-KfT" firstAttribute="centerY" secondItem="9So-FF-ggA" secondAttribute="centerY" id="313-1O-VWM"/>
                             <constraint firstItem="Imc-5Y-Cts" firstAttribute="centerY" secondItem="9So-FF-ggA" secondAttribute="centerY" id="C5W-c4-z20"/>
                             <constraint firstAttribute="bottom" secondItem="drE-h3-TKX" secondAttribute="bottom" constant="20" id="Dle-wu-adV"/>
-                            <constraint firstItem="5ry-hr-Kox" firstAttribute="leading" secondItem="Imc-5Y-Cts" secondAttribute="trailing" constant="15" id="GS2-ua-tDU"/>
+                            <constraint firstAttribute="trailing" secondItem="Imc-5Y-Cts" secondAttribute="trailing" constant="15" id="PFN-Cz-ixE"/>
                             <constraint firstAttribute="trailing" secondItem="5ry-hr-Kox" secondAttribute="trailing" constant="15" id="ZVy-8o-VNE"/>
                             <constraint firstItem="drE-h3-TKX" firstAttribute="leading" secondItem="oMT-MY-Rd2" secondAttribute="leading" id="ifY-4k-GuB"/>
                             <constraint firstItem="oMT-MY-Rd2" firstAttribute="top" secondItem="9So-FF-ggA" secondAttribute="top" constant="20" id="lRU-Ud-IZ3"/>
