--- a/Internship2022TeamSzabi/Internship2022TeamSzabi/Views/QuizViewController/QuizCustomCell/QuizQuestionTableViewCell.xib
+++ b/Internship2022TeamSzabi/Internship2022TeamSzabi/Views/QuizViewController/QuizCustomCell/QuizQuestionTableViewCell.xib
@@ -39,7 +39,7 @@
                                 <fontDescription key="fontDescription" name="InterV_Medium" family="Inter V" pointSize="18"/>
                                 <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <inset key="titleEdgeInsets" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                <state key="normal" title="asdasdasdasdasdas">
+                                <state key="normal" title="Permeable">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <imageReference key="image" image="circle-unselected-icon" symbolScale="default"/>
                                 </state>
@@ -60,7 +60,7 @@
                                 <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <inset key="titleEdgeInsets" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" title="asdasdasdasdasdas">
+                                <state key="normal" title="Semipermeable">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <imageReference key="image" image="circle-unselected-icon" symbolScale="default"/>
                                 </state>
@@ -79,7 +79,7 @@
                                 <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <inset key="titleEdgeInsets" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" title="asdasdasdasdasdas">
+                                <state key="normal" title="Nonpermeable">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <imageReference key="image" image="circle-unselected-icon" symbolScale="default"/>
                                 </state>
@@ -98,7 +98,7 @@
                                 <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <inset key="titleEdgeInsets" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" title="asdasdasdasdasdas">
+                                <state key="normal" title="Non of the above">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <imageReference key="image" image="circle-unselected-icon" symbolScale="default"/>
                                 </state>
