--- a/Internship2022TeamSzabi/Internship2022TeamSzabi/Views/TestsSegmentedController/TestsCustomCells/ChaptersTableViewCell.xib
+++ b/Internship2022TeamSzabi/Internship2022TeamSzabi/Views/TestsSegmentedController/TestsCustomCells/ChaptersTableViewCell.xib
@@ -29,7 +29,6 @@
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Mathematics" translatesAutoresizingMaskIntoConstraints="NO" id="Vcc-DP-KfT">
                                 <rect key="frame" x="20" y="27" width="40" height="40"/>
-                                <color key="tintColor" name="ProfileLabelColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="G0e-fW-8IJ"/>
                                     <constraint firstAttribute="width" constant="40" id="hTq-vZ-Yd8"/>
@@ -65,6 +64,7 @@
                         <color key="backgroundColor" name="RegisterBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="Vcc-DP-KfT" firstAttribute="centerY" secondItem="9So-FF-ggA" secondAttribute="centerY" constant="2" id="313-1O-VWM"/>
+                            <constraint firstItem="Imc-5Y-Cts" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="oMT-MY-Rd2" secondAttribute="trailing" constant="10" id="7iX-hg-cyb"/>
                             <constraint firstItem="Imc-5Y-Cts" firstAttribute="centerY" secondItem="9So-FF-ggA" secondAttribute="centerY" constant="2.25" id="C5W-c4-z20"/>
                             <constraint firstAttribute="bottom" secondItem="drE-h3-TKX" secondAttribute="bottom" constant="16" id="Dle-wu-adV"/>
                             <constraint firstAttribute="trailing" secondItem="Imc-5Y-Cts" secondAttribute="trailing" constant="15" id="PFN-Cz-ixE"/>
